--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -11,19 +11,15 @@ body, html{
 body{
     position: relative;
 }
-/* 
-.container{
-    width: 100%;
-    height: auto;
-} */
+
 nav{
-    padding:10px 50px;
+    padding:5px 50px;
     transition: 0.6s;
     /* width: 50%; */
     justify-self: center;
     /* background-color: blue; */
     background-color: rgba(77, 74, 74, 0.3);
-    color: rgba(0, 0, 0, 0.918);
+    color: rgb(233, 125, 24);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -44,29 +40,37 @@ nav{
 .botchi{
     font-size: large;
 }
-.logo{
-    /* background-color: aqua;
-    font-size: 1.3rem */
-}
+
 
 .nav-links{
     /* background-color: aqua; */
     font-size: 2em;
     font-weight: bold;
     /* padding-right: 30px; */
-    width: 20%;
+    width: 35%;
     display: flex;
     justify-content: space-around;
+}
+#about{
+    padding-left: 20px;
+    padding-right: 20px;
 }
 .nav-links a{
     
     /* border-radius: 7px; */
     display: inline-block;
-    padding: 7px;
+    padding: 7px 12px;
     font-family: sans-serif;
-    font-size: 14px;
+    font-size: 16px;
     text-decoration: none;
-    color: black;
+    color: white;
+    margin-left: 3px;
+    border-bottom-left-radius: 7px;
+    border-top-right-radius: 7px;
+    border: 2px solid goldenrod;
+    /* background-color: rgb(233, 125, 24); */
+    background: linear-gradient(90deg, rgb(238, 236, 119) 0%, hsl(51, 94%, 42%) 35%, #f0bf1c 100%)
+
     
 }
 .nav-links a:hover{
@@ -91,6 +95,22 @@ nav.sticky{
 .cancel{
     display: none;
 }
+select{
+    border-bottom-left-radius: 7px;
+    border-top-right-radius: 7px;
+    border: 2px solid goldenrod;
+    
+    background: transparent url('../images/arab.jpeg') no-repeat;
+    color: whitesmoke;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+
+}
+select option{
+    color: black;
+}
+
 @media screen and (max-width: 600px){
     nav{
         width: 100%;
@@ -101,8 +121,13 @@ nav.sticky{
     }
     .nav-links{
         display: none;
+        width: 30%;
         /* width: 30%; */
         /* background-color: gold; */
+    }
+    h1{
+        left: 25%;
+        position: absolute;
     }
     .hamburger{
         position: absolute;
