--- a/styles/cards.css
+++ b/styles/cards.css
@@ -6,7 +6,7 @@
 .services-container{
     width: 80%;
     display: flex;
-    /* border: 1px solid red; */
+    border: 1px solid white;
     height: 100%;
     margin: auto;
     justify-content: space-between;
@@ -15,7 +15,7 @@
 .services-card{
     width: 28%;
     height: 100%;
-    /* border: 1px solid red; */
+    border: 1px solid white;
     
 }
 .services-card:hover{
@@ -24,13 +24,13 @@
 .card-1{
     width: 100%;
     height: 70%;
-    /* border: 1px solid yellow; */
+    border: 1px solid white;
 }
 .card-2{
     width: 80%;
     margin: auto;
     height: 70%;
-    /* border: 1px solid green; */
+    border: 1px solid white;
     position: relative;
     margin-top: 60%;
     padding: 5px 0;
